Alterações nas config de depuração

--- a/controle-fluxo/.vscode/launch.json
+++ b/controle-fluxo/.vscode/launch.json
@@ -30,6 +30,16 @@
                 "${fileDirname}"
             ],
             "externalConsole": true
+        },
+        {
+            "name": "Java Debug",
+            "type": "java",
+            "request": "launch",
+            "stopOnEntry": false,
+            "cwd":"$workspaceFolder",
+            "console":"internalConsole",
+            "mainClass": "${fileBasename}",
+            "args": ""
         }
     ]
 }
